# my-py-framework-standards

./: .gitignore  README.md  makefile  setup.cfg  setup.py
my-py-framework-standards/base/: base_client.py
my-py-framework-standards/clients/: listen_to_client.py
my-py-framework-standards/config/: interests.yaml
tests/unit/fixtures/: listean.py  listen.py
