
[flake8]
exclude=env,.tox,.eggs
ignore=E501, W503
max-line-length = 120

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
    coverage
    coveralls
    flake8
    black

[tool:pytest]
addopts =
    --verbose
    --cov my-py-framework-standards/
    --cov-report term-missing